# valor-kv

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/examples/: basic_usage.rs
client/src/: lib.rs
src/: handler.rs  main.rs  store.rs
tests/: tcp_integration_tests.rs
