[package]
name = "valor_kv"
version = "0.2.2"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "Simple and efficient key value store built with Rust"
readme = "README.md"
homepage = "https://github.com/alex289/valor-kv"
repository = "https://github.com/alex289/valor-kv"
keywords = ["kv"]
categories = ["database-implementations"]

[dependencies]
bincode = "2.0.1"
config = "0.15.11"
ctrlc = "3.4.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
serial_test = "3.2.0"
valor_kv_client = { path = "client" }

[workspace]
members = [
    "client",
]
