[package]
name = "valor_kv"
version = "0.2.2"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "Simple and efficient key value store built with Rust"
readme = "README.md"
homepage = "https://github.com/alex289/valor-kv"
repository = "https://github.com/alex289/valor-kv"
keywords = ["kv"]
categories = ["database-implementations"]

[dependencies]
bincode = "3.0.0"
config = "0.15.19"
ctrlc = "3.5.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
serial_test = "3.3.1"
valor_kv_client = { path = "client" }

[workspace]
members = [
    "client",
]
