[package]
name = "valor_kv_client"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "A client library for interacting with the valor_kv key-value store."
readme = "../README.md"
homepage = "https://github.com/alex289/valor-kv"
repository = "https://github.com/alex289/valor-kv"
keywords = ["kv", "client"]
categories = ["database-implementations"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"