[package]
name = "valor_kv_client"
version = "0.2.2"
edition = "2021"
authors = ["Alexander Konietzko <me@alexanderkonietzko.com>"]
license = "MIT"
description = "A client library for interacting with the valor_kv key-value store."
readme = "../README.md"
homepage = "https://github.com/alex289/valor-kv"
repository = "https://github.com/alex289/valor-kv"
keywords = ["kv", "client"]
categories = ["database-implementations"]

[dependencies]
postcard = { version = "1.1", features = ["alloc", "use-std"] }
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
